--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: AI Codegenit
-        uses: madhavi-opsera/aicodegen@v1
+        uses: madhavi-opsera/aicodegen@2.0.0
           
