--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,12 @@ jobs:
   test-mcp:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      packages: read  # Required to pull from GHCR
+      id-token: write       
+      contents: read 
     steps:
       - name: Checkout (optional)
         uses: actions/checkout@v3
 
       - name: AI Codegenit
-        uses: madhavi-opsera/aicodegen@2.0.0
+        uses: madhavi-opsera/aicodegen@16
           
